# set08116_framework

./: .gitignore  .gitmodules  CMakeLists.txt  DownloadProject.cmake  cmake_build_vs15.bat  readme.md
res/shaders/: basic.frag  basic.vert  basic_colour.frag  basic_colour.vert  basic_textured.frag  basic_textured.vert  skybox.frag  skybox.vert
src/: app.cpp  app.h  arc_ball_camera.cpp  arc_ball_camera.h  camera.h  chase_camera.cpp  chase_camera.h  cubemap.cpp  cubemap.h  depth_buffer.cpp  depth_buffer.h  directional_light.cpp  directional_light.h  effect.cpp  effect.h  frame_buffer.cpp  frame_buffer.h  free_camera.cpp  free_camera.h  geometry.cpp  geometry.h  geometry_builder.cpp  geometry_builder.h  graphics_framework.h  main.cpp  material.h  mesh.h  point_light.h  renderer.cpp  renderer.h  shadow_map.cpp  shadow_map.h  spot_light.h  stdafx.cpp  stdafx.h  target_camera.cpp  target_camera.h  terrain.cpp  terrain.h  texture.cpp  (+4 more)
test/: test.cpp
